--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main{
   width:100%;
   height:100vh;
   color:white;
-  background:linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('마스코트.png') center center;
+  background:linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('./마스코트.png') center center;
   background-size:cover;
   display:flex;
   justify-content:center;
